--- a/index.html
+++ b/index.html
@@ -1600,9 +1600,8 @@
                     if (imageContainer && card) {
                     const cardId = card.dataset.id;
                     
-                    window.location.href = `https://bdviralvideoviral.blogspot.com/?cardId=${cardId}`; 
-
-                    }
+                    window.location.href = `https://bdviralvideoviral.blogspot.com/p/?cardId=${cardId}`; 
+                }
 
             });
 
