--- a/video-player.html
+++ b/video-player.html
@@ -712,7 +712,7 @@
         const referrer = document.referrer;
 
         if (referrer === '' || !referrer.startsWith(allowedOrigin)) {
-            // window.location.href = allowedOrigin + '/link/';
+            // window.location.href = allowedOrigin + '/vdo/';
         }
         
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
