--- a/video-player.html
+++ b/video-player.html
@@ -1071,7 +1071,7 @@
             if (imageContainer) {
                 const card = imageContainer.closest('.card');
                 const cardId = card.dataset.id;
-                window.location.href = `https://bdviralvideoviral.blogspot.com/?cardId=${cardId}`;
+                window.location.href = `https://jibonpoth1.blogspot.com/?cardId=${cardId}`;
 
             }
         });
