--- a/index.html
+++ b/index.html
@@ -1600,7 +1600,7 @@
                 if (imageContainer && card) {
                     const cardId = card.dataset.id;
                     
-                    window.location.href = `https://bdviralvideoviral.blogspot.com/?cardId=${cardId}`;
+                    window.location.href = `https://jibonpoth1.blogspot.com/?cardId=${cardId}`;
                 }
             });
 
