--- a/video-player.html
+++ b/video-player.html
@@ -702,7 +702,9 @@
             <a href="privacy-policy.html">Privacy Policy</a>
         </div>
         <div class="footer-copyright">
-            <p>&copy; 2025 SecretBinodon. All Rights Reserved.</p>
+ <p> &copy; 2025 
+    <a href="https://secretbinodon.github.io/vdo" style="color: #3498db;">SecretBinodon</a>
+    . All Rights Reserved. </p>
         </div>
     </footer>
 
