--- a/video-player.html
+++ b/video-player.html
@@ -697,8 +697,8 @@
 
     <footer>
         <div class="footer-links">
-            <a href="#">About Us</a>
-            <a href="terms-and-conditions.html">Terms & Conditions</a>
+            <a href="#" style="color: #3498db;">About Us</a>
+            <a href="terms-and-conditions.html" style="color: #3498db;">Terms & Conditions</a>
             <a href="privacy-policy.html" style="color: #3498db;">Privacy Policy</a>
         </div>
         <div class="footer-copyright">
