--- a/index.html
+++ b/index.html
@@ -927,9 +927,9 @@
             <div id="pagination-container" class="pagination-container"></div>
             <footer>
                 <div class="footer-links">
-                    <a href="#">About Us</a>
-                    <a href="terms-and-conditions.html">Terms & Conditions</a>
-                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <a href="#" style="color: #3498db;">About Us</a>
+                    <a href="terms-and-conditions.html" style="color: #3498db;">Terms & Conditions</a>
+                    <a href="privacy-policy.html" style="color: #3498db;">Privacy Policy</a>
                 </div>
                 <div class="footer-copyright">
                     <p>&copy; 2025 SecretBinodon. All Rights Reserved.</p>
