--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
             <div id="pagination-container" class="pagination-container"></div>
             <footer>
                 <div class="footer-links">
-                    <a href="#" style="color: #3498db;">About Us</a>
+                    <a href="about.html" style="color: #3498db;">About Us</a>
                     <a href="terms-and-conditions.html" style="color: #3498db;">Terms & Conditions</a>
                     <a href="privacy-policy.html" style="color: #3498db;">Privacy Policy</a>
                 </div>
