--- a/about.html
+++ b/about.html
@@ -47,6 +47,14 @@
     a[href^="mailto:"]:hover {
         text-decoration: underline; 
     }
+    
+    /* ৫. কপিরাইট নোটিশের জন্য নতুন স্টাইল */
+    .copyright {
+        text-align: center;
+        margin-top: 40px;
+        font-size: 0.85em;
+        color: #666;
+    }
   </style>
 </head>
 <body>
@@ -90,5 +98,9 @@
     please reach out to us at:
   </p>
   <p><strong>Email:</strong> <a href="mailto:support@secretbinodon.com">support@secretbinodon.com</a></p>
+
+  <p class="copyright">
+    © 2025 SecretBinodon. All Rights Reserved.
+  </p>
 </body>
 </html>
