--- a/index.html
+++ b/index.html
@@ -1700,7 +1700,7 @@
                 const newCardCode = `{
     "id": "${newId}",
     "title": "${title}",
-    "image": "${thumbnailUrl}", // **** পরিবর্তন: এখানে স্বয়ংক্রিয় URL যুক্ত করা হলো ****
+    "image": "${thumbnailUrl}",
     "embed_code": "${escapedEmbedCode}",
     "category": ["${category}"],
     "uploadTime": "${currentTime}"
