--- a/video-player.html
+++ b/video-player.html
@@ -664,6 +664,24 @@ header {
         <div id="video-embed-section">
             <div class="video-container" id="video-container">
                 </div>
+
+
+            <div style="text-align: center; margin: 0 auto;">
+                <script type="text/javascript">
+  atOptions = {
+  	'key' : 'a77d37045b73ff51a416345b6ebcc586',
+  	'format' : 'iframe',
+  	'height' : 50,
+  	'width' : 320,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="//prototypesorting.com/a77d37045b73ff51a416345b6ebcc586/invoke.js"
+></script>
+            </div>
+
             
             <div class="video-title-bar" id="video-title-bar">
                 <div class="title-and-more-container">
