--- a/video-player.html
+++ b/video-player.html
@@ -760,7 +760,7 @@ header {
         </div>
         
         <div class="recommended-section" id="recommended-section">
-            <h2>⬇️ আপনার জন্য নির্বাচিত কিছু ভিডিও ⬇️</h2>
+            <h2>⬇️ Recommended Videos for You ⬇️</h2>
             <div class="container" id="recommended-container">
                 </div>
         </div>
