--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="profile-header-area">
             <div class="profile-pic-container">
                 <div class="profile-pic">
-                    <img src="https://raw.githubusercontent.com/style-grid/store/refs/heads/main/data/20251211_024630.jpg">
+                    <img src="https://raw.githubusercontent.com/SecretBinodon/vdo/refs/heads/main/Image%20Files/secretbinodon.jpg">
                 </div>
             </div>
             <div class="action-buttons">
@@ -304,7 +304,7 @@
 
 
         // ... [বাকি সব কনফিগারেশন, Firebase, Utility Functions অপরিবর্তিত] ...
-        const PERMANENT_PROFILE_IMAGE_URL = "https://raw.githubusercontent.com/style-grid/store/refs/heads/main/data/20251211_024630.jpg";
+        const PERMANENT_PROFILE_IMAGE_URL = "https://raw.githubusercontent.com/SecretBinodon/vdo/refs/heads/main/Image%20Files/secretbinodon.jpg";
 
         const firebaseConfig = { apiKey: "AIzaSyCAsD8wucLsudzY5oNbiixLGyjN2apdV0Q", authDomain: "my-ad-analytics-4560a.firebaseapp.com", databaseURL: "https://my-ad-analytics-4560a-default-rtdb.firebaseio.com", projectId: "my-ad-analytics-4560a", storageBucket: "my-ad-analytics-4560a.firebasestorage.app", messagingSenderId: "104213283950", appId: "1:104213283950:web:b5a25ecd54df809625127f", measurementId: "G-WS7QSQ9H0Y" };
         const app = initializeApp(firebaseConfig);
