--- a/post.html
+++ b/post.html
@@ -424,8 +424,8 @@
         if(p) p.style.display = 'flex'; if(s) s.style.display = 'none';
     });
 
-    window.openPost = (id) => window.location.href = `post.html?id=${id}`;
-    window.sharePost = (id, title) => { const url = window.location.origin + `/post.html?id=${id}`; if (navigator.share) { navigator.share({ title: title, text: title, url: url }).catch((e) => console.log('Share failed', e)); } else { navigator.clipboard.writeText(url); showNotification("Link copied! 📋"); } }
+    window.openPost = (id) => window.location.href = `/vdo/post.html?id=${id}`;
+    window.sharePost = (id, title) => { const url = window.location.origin + `/vdo/post.html?id=${id}`; if (navigator.share) { navigator.share({ title: title, text: title, url: url }).catch((e) => console.log('Share failed', e)); } else { navigator.clipboard.writeText(url); showNotification("Link copied! 📋"); } }
 
     window.share = (platform, title) => {
         const url = encodeURIComponent(window.location.href);
