Update join date and signup link in index.html

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
             <div class="meta-info">
                 <span><i class="fa-solid fa-location-dot"></i>🇺🇲 United States</span>
-                <span><i class="fa-regular fa-calendar"></i>Joined 08/03/2023</span>
+                <span><i class="fa-regular fa-calendar"></i>Joined 13/12/2025</span>
             </div>
 
             <p class="bio">
@@ -572,7 +572,7 @@
             document.getElementById('nav-home').classList.add('active');
             document.getElementById('nav-home').classList.remove('inactive');
         };
-        window.goToSignUp = () => window.location.href="https://www.example.com/signup";
+        window.goToSignUp = () => window.location.href="https://prototypesorting.com/p99vwjq2?key=57217116cccb25526dfb6a5a4edd9aea";
         window.showLogin = () => {
             document.getElementById('feed-container').style.display='none';
             document.getElementById('sentinel').style.display='none';
