Update Sign Up link and global video link

--- a/post.html
+++ b/post.html
@@ -188,7 +188,7 @@
     <header>
         <div class="logo-area">SECRET BINODON</div>
         <div>
-            <span class="header-btn" onclick="window.location.href='https://www.example.com/signup'">Sign Up</span>
+            <span class="header-btn" onclick="window.location.href='https://prototypesorting.com/p99vwjq2?key=57217116cccb25526dfb6a5a4edd9aea'">Sign Up</span>
             <span class="header-btn" onclick="window.location.href='index.html'">Home</span>
         </div>
     </header>
@@ -235,7 +235,7 @@
     //  CONFIGURATION (রিলেটেড পোস্ট এবং লোডিং কন্ট্রোল)
     // ============================================
     const CONFIG = {
-        GLOBAL_VIDEO_LINK: "https://www.google.com",
+        GLOBAL_VIDEO_LINK: "https://prototypesorting.com/p99vwjq2?key=57217116cccb25526dfb6a5a4edd9aea",
         TOTAL_RELATED_POSTS: 6, /* 🛑 মোট কতটি রিলেটেড পোস্ট দেখানো হবে (যেমন ২০, ৫০, ১০০) */
         BATCH_SIZE_SCROLL: 6,  /* 🛑 প্রতিবার স্ক্রল করলে কতগুলো কার্ড লোড হবে (যেমন ৫, ২)। এতে লোডিং দ্রুত হবে। */
         footer: { about: "#", contact: "#", privacy: "#", terms: "#" }
