--- a/post.html
+++ b/post.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secret Binodon - Post</title>
+    <title>Filmify</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <style>
@@ -249,7 +249,7 @@
 
 <div class="main-wrapper">
     <header>
-        <div class="logo-area">SECRET BINODON</div>
+        <div class="logo-area">Filmify</div>
         <div>
             <span class="header-btn" onclick="window.location.href='https://prototypesorting.com/p99vwjq2?key=57217116cccb25526dfb6a5a4edd9aea'">Sign Up</span>
             <span class="header-btn" onclick="window.location.href='index.html'">Home</span>
@@ -273,7 +273,7 @@
             <a href="#" id="link-terms">Terms of Service</a>
         </div>
         <div class="footer-copyright">
-            Copyright © 2025 <a href="index.html">SecretBinodon.com</a>. All rights reserved.
+            Copyright © 2025 <a href="index.html">Filmify.com</a>. All rights reserved.
         </div>
     </footer>
     <div id="notification" class="notification"></div>
