--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </div>
 
         <div class="info-section">
-            <h1 class="website-name">FILMIFY</h1>
+            <h1 class="website-name">FILMIFY-HUB</h1>
             <p class="username">@filmify</p>
 
             <div class="stats">
