--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             else { navigator.clipboard.writeText(`${text} ${url}`); showNotification("Website link copied! 📋"); }
         }
         window.sharePost = function(id, title) {
-            const url = window.location.origin + `/vdo/post.html?id=${id}`;
+            const url = window.location.origin + `/movie/post.html?id=${id}`;
             if (navigator.share) { navigator.share({ title: title, text: title, url: url }).catch((e) => console.log('Share failed', e)); }
             else { navigator.clipboard.writeText(url); showNotification("Link copied! 📋"); }
         }
@@ -560,7 +560,7 @@
         // --- পেজ নেভিগেশন (অপরিবর্তিত) ---
         window.openPost = (id) => {
             sessionStorage.setItem('scrollPos', window.scrollY); 
-            window.location.href = `/vdo/post.html?id=${id}`;
+            window.location.href = `/movie/post.html?id=${id}`;
         };
         
         window.showFeed = () => {
