--- a/post.html
+++ b/post.html
@@ -108,10 +108,10 @@
         /* স্ট্যাটস বার (অপরিবর্তিত) */
         .stats-section { padding: 12px 0; margin-top: 15px; border-top: 1px solid #e1e8ed; border-bottom: 1px solid #e1e8ed; display: flex; align-items: center; background: #fff; }
         .stats-left { display: flex; align-items: center; gap: 20px; flex-grow: 1; overflow: hidden; }
-        .view-stat { flex: 0 0 auto; display: flex; align-items: center; gap: 5px; font-weight: bold; font-size: 15px; color: #536471; }
+        .view-stat { flex: 0 0 auto; display: flex; align-items: center; gap: 5px; font-weight: 500; font-size: 15px; color: #536471; }
         .view-stat i { font-size: 16px; }
         .like-stat-container { flex: 1 1 auto; display: flex; justify-content: center; }
-        .love-btn { display: flex; align-items: center; gap: 5px; font-weight: bold; font-size: 15px; color: #536471; cursor: pointer; padding: 5px 10px; border-radius: 20px; transition: 0.2s; user-select: none; }
+        .love-btn { display: flex; align-items: center; gap: 5px; font-weight: 500; font-size: 15px; color: #536471; cursor: pointer; padding: 5px 10px; border-radius: 20px; transition: 0.2s; user-select: none; }
         .love-btn:active { background-color: rgba(224, 36, 94, 0.1); transform: scale(0.95); }
         .love-btn.liked { color: #e0245e; } .love-btn.liked i { font-weight: 900; } .love-btn i { font-size: 18px; }
         .share-icons { flex: 0 0 auto; display: flex; gap: 8px; }
