--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         #feed-container { min-height: 200px; }
         
         .post-card { 
-            padding: 5px; border-bottom: 1px solid #e1e8ed; 
+            padding: 5px 15px 5px 15px; border-bottom: 1px solid #e1e8ed; 
             display: flex; flex-direction: column; 
             gap: 6px; 
             background: white; opacity: 0; animation: fadeIn 0.5s forwards;
