--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             </div>
 
             <p class="bio">
-                Secret Binodon this is one of the most popular and best websites for Secret Binodon Viral Video, YouTube Viral Video, Facebook Viral Video, Instagram Viral Video, TikTok Viral Video and much more. Which can be very helpful for your daily life.
+                FILMIXO: Ditch the wait, seize the cinema. We are the ultimate hub for downloading trending blockbusters, exclusive new releases, and premium cinematic escapes. Stop scrolling, start watching—your HD movie journey begins now.
             </p>
         </div>
 
