--- a/post.html
+++ b/post.html
@@ -99,7 +99,7 @@
         .related-header { padding: 15px; font-weight: 800; color: #536471; border-bottom: 1px solid #e1e8ed; text-transform: uppercase; background: #fff; }
         
         .post-card { 
-            background: white; padding: 15px; border-bottom: 1px solid #e1e8ed; 
+            background: white; padding: 5px 15px 15px 5px; border-bottom: 1px solid #e1e8ed; 
             display: flex; flex-direction: column; 
             gap: 6px; 
         }
