--- a/index.html
+++ b/index.html
@@ -387,13 +387,13 @@
 
     <div class="main-container">
         <div class="cover-photo">
-            <img src="https://e0.pxfuel.com/wallpapers/114/575/desktop-wallpaper-stephanie-potrait-eyes-girls-eyes-eyes-gorgeous-eyes-arabic-eyes.jpg">
+            <img src="https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image Files/FILMIXO-HUB.jpg">
         </div>
 
         <div class="profile-header-area">
             <div class="profile-pic-container">
                 <div class="profile-pic">
-                    <img src="https://raw.githubusercontent.com/SecretBinodon/vdo/refs/heads/main/Image%20Files/secretbinodon.jpg">
+                    <img src="https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image">
                 </div>
             </div>
             <div class="action-buttons">
