--- a/post.html
+++ b/post.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filmixo-Hub</title>
+    <title>Filmixo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <style>
@@ -249,7 +249,7 @@
     // ============================================
     //  ১. স্থায়ী প্রোফাইল ইমেজ URL এবং Firebase Configuration (অপরিবর্তিত)
     // ============================================
-    const PERMANENT_PROFILE_IMAGE_URL = "https://raw.githubusercontent.com/SecretBinodon/vdo/refs/heads/main/Image%20Files/secretbinodon.jpg";
+    const PERMANENT_PROFILE_IMAGE_URL = "https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image Files/FILMIXO.jpg";
 
     const firebaseConfig = { apiKey: "AIzaSyCAsD8wucLsudzY5oNbiixLGyjN2apdV0Q", authDomain: "my-ad-analytics-4560a.firebaseapp.com", databaseURL: "https://my-ad-analytics-4560a-default-rtdb.firebaseio.com", projectId: "my-ad-analytics-4560a", storageBucket: "my-ad-analytics-4560a.firebasestorage.app", messagingSenderId: "104213283950", appId: "1:104213283950:web:b5a25ecd54df809625127f", measurementId: "G-WS7QSQ9H0Y" };
     const app = initializeApp(firebaseConfig);
