--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             font-size: 15px; /* 🔥 পরিবর্তন: ফন্ট সাইজ ১৫ করা হয়েছে */
             color: #0f1419; /* 🔥 পরিবর্তন: গাঢ় কালো করা হয়েছে */
             line-height: 1.2; 
+            word-spacing: -0.5px; 
             text-align: justify; 
             margin-bottom: 0; 
         }
