--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             font-size: 15px; 
             color: #1c1e21; /* 🔥 পরিবর্তন: হালকা কালো (#1c1e21) করা হয়েছে */
             line-height: 1.2; /* 🔥 পরিবর্তন: লাইনের গ্যাপ কমাতে 1.2 করা হলো */
-            word-spacing: -0.5px; /* 🔥 পরিবর্তন: শব্দের গ্যাপ কমাতে -0.5px করা হলো */
+            word-spacing: normal; /* 🔥 পরিবর্তন: শব্দের গ্যাপ কমাতে -0.5px করা হলো */
             text-align: justify; /* justify রাখা হয়েছে যাতে বাম ও ডান দিকে সমান থাকে */
             margin-bottom: 0; 
         }
