--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         
         .username { 
             font-size: 15px; 
-            color: #536471; 
+            color: #1da1f2; 
             margin-bottom: 12px; 
             cursor: default; 
             -webkit-tap-highlight-color: transparent; 
@@ -72,7 +72,7 @@
             display: flex;
             gap: 5px; 
             font-size: 15px;
-            color: #536471; 
+            color: #0f1419; 
             margin-bottom: 8px; 
             font-weight: 500; 
         }
