--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         
         .username { 
             font-size: 15px; 
-            color: #536471; /* 🔥 পরিবর্তন: নীল থেকে ধূসর (আগের মতো) */
-            margin-bottom: 12px; /* 🔥 পরিবর্তন: নিচে পর্যাপ্ত গ্যাপ যোগ */
+            color: #17bf63; 
+            margin-bottom: 12px; 
             cursor: default; 
             -webkit-tap-highlight-color: transparent; 
         }
@@ -67,7 +67,7 @@
             display: flex;
             gap: 5px;
             font-size: 15px;
-            color: #536471; /* ধূসর রং */
+            color: #0f1419; /* ধূসর রং */
             margin-bottom: 8px; /* মেটা ইনফো থেকে দূরত্ব */
             font-weight: 500; /* হালকা ফন্ট ওয়েট */
         }
