--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             display: flex;
             gap: 5px;
             font-size: 15px;
-            color: #0f1419; /* ধূসর রং */
+            color: #1c1e21; /* ধূসর রং */
             margin-bottom: 8px; /* মেটা ইনফো থেকে দূরত্ব */
             font-weight: 500; /* হালকা ফন্ট ওয়েট */
         }
