--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         
         .username { 
             font-size: 15px; 
-            color: #17bf63; 
+            color: #1da1f2; 
             margin-bottom: 12px; 
             cursor: default; 
             -webkit-tap-highlight-color: transparent; 
