--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             font-size: 15px;
             color: #1c1e21; /* ধূসর রং */
             margin-bottom: 8px; /* মেটা ইনফো থেকে দূরত্ব */
-            font-weight: 500; /* হালকা ফন্ট ওয়েট */
+            font-weight: narmal; /* হালকা ফন্ট ওয়েট */
         }
         .stats b {
             color: #0f1419; /* গাঢ় কালো */
