--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             font-size: 15px;
             color: #1c1e21; /* ধূসর রং */
             margin-bottom: 8px; /* মেটা ইনফো থেকে দূরত্ব */
-            font-weight: 200; /* হালকা ফন্ট ওয়েট */
+            font-weight: 400; /* হালকা ফন্ট ওয়েট */
         }
         .stats b {
-            color: #0f1419; /* গাঢ় কালো */
+            color: #1c1e21; /* গাঢ় কালো */
             font-weight: 900; /* বোল্ড সংখ্যা */
             margin-right: 2px;
         }
