--- a/index.html
+++ b/index.html
@@ -97,14 +97,13 @@
         }
         
         .bio { 
-            font-size: 15px; /* 🔥 পরিবর্তন: ফন্ট সাইজ ১৫ করা হয়েছে */
-            color: #0f1419; /* 🔥 পরিবর্তন: গাঢ় কালো করা হয়েছে */
+            font-size: 15px; 
+            color: #0f1419; 
             line-height: 1.2; 
-            word-spacing: -0.5px; 
-            text-align: justify; 
+            word-spacing: normal; 
+            text-align: left; 
             margin-bottom: 0; 
         }
-        /* 🔥🔥🔥 পরিবর্তন শেষ 🔥🔥🔥 */
 
         /* --- নেভিগেশন বার --- */
         .nav-bar {
