--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             </div>
 
             <p class="bio">
-                FILMIXO: Ditch the wait, seize the cinema. We are the ultimate hub for downloading trending blockbusters, exclusive new releases, and premium cinematic escapes. Stop scrolling, start watching—your HD movie journey begins now.
+                FILMIXO:🍿Your ultimate HD movie hub. Download exclusive releases and trending blockbusters instantly. Stop scrolling, seize the cinema.
             </p>
         </div>
 
