--- a/index.html
+++ b/index.html
@@ -72,9 +72,13 @@
             font-weight: 400; /* হালকা ফন্ট ওয়েট */
         }
         .stats b {
-            color: #1c1e21; /* গাঢ় কালো */
-            font-weight: 900; /* বোল্ড সংখ্যা */
+            color: #1c1e21; 
+            font-weight: 900; 
             margin-right: 2px;
+            display: inline-block;
+            font-feature-settings: "tnum"; 
+            -webkit-font-feature-settings: "tnum";
+            white-space: nowrap; 
         }
 
         /* 🔥 নতুন: meta-info (লোকেশন, জয়েন ডেট) এর স্টাইল */
