--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         /* --- প্রোফাইল হেডার --- */
-        .cover-photo { width: 100%; height: 160px; background-color: #ddd; overflow: hidden; position: relative; }
+        .cover-photo { width: 100%; height: 160px; background-color: #ddd; overflow: hidden; position: relative; contain: strict; }
         .cover-photo img { width: 100%; height: 100%; object-fit: cover; }
 
         .profile-header-area { position: relative; padding: 0 15px; display: flex; justify-content: space-between; align-items: flex-start; }
