--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             font-size: 16px; 
             color: #0f1419; 
             line-height: 1.2; 
-            word-spacing: normal; 
+            word-spacing: 400; 
             text-align: left; 
             margin-bottom: 0; 
         }
