--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         .stats {
             display: flex;
             gap: 2px;
-            font-size: 15px;
+            font-size: 14px;
             color: #1c1e21; /* ধূসর রং */
             margin-bottom: 8px; /* মেটা ইনফো থেকে দূরত্ব */
             font-weight: 400; /* হালকা ফন্ট ওয়েট */
@@ -81,7 +81,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 15px;
-            font-size: 15px;
+            font-size: 14px;
             color: #536471; /* ধূসর রং */
             margin-bottom: 10px; /* বায়ো থেকে দূরত্ব */
         }
@@ -99,7 +99,7 @@
             font-size: 16px; 
             color: #0f1419; 
             line-height: 1.2; 
-            word-spacing: 200; 
+            word-spacing: narmal; 
             text-align: left; 
             margin-bottom: 0; 
         }
