--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         
         .bio { 
             font-size: 16px; 
-            color: #0f1419; 
+            color: #1c1e21; 
             line-height: 1.2; 
             word-spacing: narmal; 
             text-align: left; 
