--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FILMIXO</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
-    <link rel="preload" as="image" href="https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image Files/FILMIXO-HUB.jpg" width="320" height="135">
 
+    <link rel="preload" as="image" href="https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image Files/FILMIXO-HUB.jpg">
+    
     <style>
         /* --- বেসিক রিসেট --- */
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; text-decoration: none; }
@@ -21,7 +21,7 @@
         }
 
         /* --- প্রোফাইল হেডার --- */
-        .cover-photo { width: 100%; height: 135px; background-color: #ddd; overflow: hidden; position: relative; contain: strict; aspect-ratio: 320 / 135; }
+        .cover-photo { width: 100%; height: 150px; background-color: #ddd; overflow: hidden; position: relative; contain: strict; }
         .cover-photo img { width: 100%; height: 100%; object-fit: cover; }
 
         .profile-header-area { position: relative; padding: 0 15px; display: flex; justify-content: space-between; align-items: flex-start; }
@@ -409,7 +409,7 @@
 
     <div class="main-container">
         <div class="cover-photo">
-     <img src="https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image Files/FILMIXO-HUB.jpg" width="320" height="135">
+      <img src="https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image Files/FILMIXO-HUB.jpg">
             </div>
 
         <div class="profile-header-area">
