--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         .cover-photo { 
             width: 100%; 
-            height: 150px; /* হাইট পরিবর্তন: 135px -> 150px */
+            height: 150px; 
             background-color: #ddd; 
             overflow: hidden; 
             position: relative; 
@@ -39,7 +39,7 @@
             background-color: #ffffff; 
             display: flex; 
             justify-content: center; 
-            /* 🔥 ট্যাপ হাইলাইট বন্ধ: Global ফিক্স (বাটনগুলির জন্য দরকার) */
+            /* 🔥 ট্যাপ হাইলাইট বন্ধ: Global ফিক্স */
             -webkit-tap-highlight-color: transparent; 
             user-select: none;
         }
@@ -60,7 +60,7 @@
             align-items: flex-start; 
         }
         .profile-pic-container { 
-            /* Layout Shift ফিক্স: কভার ফটোর হাইট (150px) অনুযায়ী প্রোফাইল পিকচার উপরে আনা হলো */
+            /* কভার ফটোর হাইট (150px) অনুযায়ী প্রোফাইল পিকচার উপরে আনা হলো */
             margin-top: -75px; 
             z-index: 2; 
         }
@@ -250,7 +250,7 @@
         .time-ago { font-size: 15px; color: #536471; }
         .dot-separator { font-size: 15px; color: #536471; margin: 0 2px; }
         
-        /* 🔥 ট্যাপ এফেক্ট ১: টাইটেল/প্যারাগ্রাফ */
+        /* 🔥 ট্যাপ এফেক্ট ১: টাইটেল/প্যারাগ্রাফ (আগের মতো নীল) */
         .clickable-area { 
             cursor: pointer; 
             -webkit-tap-highlight-color: transparent; 
@@ -258,7 +258,8 @@
             transition: background-color 0.1s ease; 
         }
         .clickable-area:active {
-            background-color: rgba(29, 161, 242, 0.1); /* হালকা নীল ব্যাকগ্রাউন্ড */
+            /* পূর্বের শক্তিশালী নীল এফেক্ট নিশ্চিত করা হলো */
+            background-color: rgba(29, 161, 242, 0.15); 
         }
 
         .post-title { 
@@ -280,22 +281,22 @@
             position: relative; 
             width: 100%; 
             border-radius: 12px; /* ইমেজের গোল কোণা */
-            overflow: hidden;
+            overflow: hidden; /* ইমেজের বাইরের ট্যাপ হাইলাইট বন্ধ করার জন্য */
             margin-top: 5px; 
             display: block; 
             cursor: pointer; 
             background: #000;
             aspect-ratio: 3 / 4; 
             max-height: 720px; 
-            transition: box-shadow 0.1s ease; /* শ্যাডোর জন্য ট্রানজিশন */
-            -webkit-tap-highlight-color: transparent; /* এটি দরকার কারণ আমরা কাস্টম ট্যাপ এফেক্ট ব্যবহার করছি */
+            /* background-color ট্রানজিশন যোগ করা হলো যাতে blue ট্যাপ এফেক্ট স্মুথ হয় */
+            transition: background-color 0.1s ease; 
+            -webkit-tap-highlight-color: transparent; 
         }
-        /* 🔥 ট্যাপ এফেক্ট ২: ইমেজ কন্টেইনার (নীল ও রাউন্ডেড) */
+        /* 🔥 ট্যাপ এফেক্ট ২: ইমেজ কন্টেইনার (নীল, রাউন্ডেড, ও বাউন্ডেড) */
         .media-container:active {
-            /* বক্স শ্যাডো ব্যবহার করে নীল রঙের রাউন্ডেড হাইলাইট তৈরি করা হলো। 
-               এটি কন্টেইনারের border-radius অনুসরণ করবে। 
-            */
-            box-shadow: inset 0 0 0 1000px rgba(29, 161, 242, 0.2); 
+            /* ইমেজের দৃশ্যমান অংশের মধ্যেই নীল হাইলাইট থাকবে (border-radius অনুসরণ করবে) */
+            background-color: rgba(29, 161, 242, 0.15); 
+            /* box-shadow: inset 0 0 0 1000px rgba(29, 161, 242, 0.2); যদি background-color কাজ না করে */
         }
         
         .media-container img { 
