--- a/post.html
+++ b/post.html
@@ -18,7 +18,7 @@
         background: #fff; 
         display: flex; 
         justify-content: center; 
-        /* 🔥 গ্লোবাল ফিক্স: অপ্রয়োজনীয় হাইলাইট বন্ধ করা হলো (সকলের জন্য) */
+        /* 🔥 ১. গ্লোবাল ফিক্স: অপ্রয়োজনীয় হাইলাইট বন্ধ করা হলো (সকলের জন্য) */
         -webkit-tap-highlight-color: transparent; 
         user-select: none;
     }  
@@ -46,17 +46,18 @@
     }  
     .logo-area { font-weight: 800; font-size: 20px; text-transform: uppercase; }  
     
-    /* 🔥 হেডার বাটন: শুধুমাত্র এই দুটিতে ট্যাপ হাইলাইট ফিরিয়ে আনা হলো */
+    /* 🔥 হেডার বাটন: ২. শুধুমাত্র এই দুটিতে ট্যাপ হাইলাইট ফিরিয়ে আনা হলো এবং ডেবে যাওয়া ইফেক্ট অক্ষত রাখা হলো */
     .header-btn { 
         background: white; color: #1da1f2; padding: 6px 15px; border-radius: 20px; 
         font-weight: bold; font-size: 14px; margin-left: 10px; cursor: pointer; 
         transition: transform 0.1s ease; 
-        /* 🔥 পরিবর্তন: গ্লোবাল সেটিংস ওভাররাইড করে ডিফল্ট হাইলাইট ফিরিয়ে আনা হলো */
+        /* 🔥 ডিফল্ট নীল হাইলাইট ফিরিয়ে আনা হলো */
         -webkit-tap-highlight-color: inherit !important; 
     }  
     .header-btn:active {
-        transform: scale(0.95); /* ক্লিক করলে ডেবে যাবে */
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.2) inset; /* সামান্য ইনসেট শ্যাডো যোগ করে ফিডব্যাক বাড়ানো হলো */
+        /* ৩. ডেবে যাওয়ার ইফেক্ট অক্ষত আছে */
+        transform: scale(0.95); 
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.2) inset; 
     }
 
     /* পোস্ট ডিটেইলস এরিয়া */  
@@ -76,7 +77,7 @@
     .post-time { font-size: 13px; color: #536471; font-weight: bold; }  
 
     /* --- ভিডিও কন্টেইনার (ফিক্সড সাইজ) --- */  
-    /* ট্যাপ হাইলাইট বিশ্বব্যাপী বন্ধ থাকায় এখানে আর অতিরিক্ত CSS লাগবে না */
+    /* গ্লোবাল সেটিংসের কারণে এখানে নীল পর্দা আসবে না */
     .video-container { 
         width: 100%; 
         aspect-ratio: 16 / 9; 
@@ -115,12 +116,12 @@
     .download-title-text { font-size: 18px; font-weight: 800; color: #0f1419; text-align: center; margin: 20px 0 10px 0; padding: 0 15px; border-top: 1px solid #e1e8ed; padding-top: 15px; }  
     .download-buttons-container { padding: 0 15px; margin-bottom: 20px; display: flex; flex-direction: column; gap: 12px; }  
     
+    /* ৩. স্টেপ বাটন: ডেবে যাওয়া ইফেক্ট অক্ষত আছে, নীল হাইলাইট নেই */
     .download-btn-v2 { 
         display: flex; align-items: center; justify-content: center; width: 100%; padding: 14px 10px; 
         border-radius: 8px; font-weight: bold; font-size: 15px; text-align: center; color: white; 
         cursor: pointer; text-transform: uppercase; box-shadow: 0 3px 6px rgba(0,0,0,0.15); 
         transition: all 0.2s; position: relative; 
-        /* বিশ্বব্যাপী হাইলাইট বন্ধ থাকায় এটি আর অপ্রয়োজনীয় */
         user-select: none;
     }  
     .download-btn-v2:active { transform: scale(0.98); }  
@@ -133,6 +134,7 @@
     }
 
     /* 🔥 লাক্সারিয়াস ফাইনাল বাটন 🔥 */
+    /* ৩. ফাইনাল বাটন: ডেবে যাওয়া ইফেক্ট অক্ষত আছে, নীল হাইলাইট নেই */
     .final-download-btn {
         display: none; 
         background: linear-gradient(135deg, #1e1e2f, #3a3a5e, #1e1e2f) !important; 
@@ -142,7 +144,7 @@
         letter-spacing: 1px;
         font-weight: 900;
         font-size: 16px;
-        transition: all 0.2s; /* নতুন ইফেক্টের জন্য ট্রানজিশন যোগ */
+        transition: all 0.2s; 
         box-shadow: none; 
         animation: luxuryGlow 2s infinite alternate;
         margin-top: 10px;
