--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
         .time-ago { font-size: 15px; color: #536471; }
         .dot-separator { font-size: 15px; color: #536471; margin: 0 2px; }
         .post-title, .post-excerpt { cursor: pointer; -webkit-tap-highlight-color: transparent; user-select: none; transition: color 0.1s ease; }
-        .post-title { font-size: 18px; font-weight: 700; color: #0f1419; margin-bottom: 8px; margin-top: -3px; line-height: 1.3; }
+        .post-title { font-size: 18px; font-weight: 700; color: #0f1419; margin-bottom: 5px; margin-top: -3px; line-height: 1.3; }
         .post-title:active { color: #1da1f2; }
-        .post-excerpt { font-size: 15px; color: #0f1419; line-height: 1.4; margin-bottom: 5px; display: -webkit-box; -webkit-line-clamp: 4; -webkit-box-orient: vertical; overflow: hidden; }
+        .post-excerpt { font-size: 15px; color: #0f1419; line-height: 1.4; margin-bottom: 1px; display: -webkit-box; -webkit-line-clamp: 4; -webkit-box-orient: vertical; overflow: hidden; }
         .post-excerpt:active { color: #1da1f2; }
         .read-more-text { color: #1da1f2; font-weight: 600; font-size: 14px; }
         .hashtags { color: #1d9bf0; font-size: 15px; margin-bottom: 1px; cursor: default; }
         
         /* --- মিডিয়া কন্টেইনার --- */
-        .media-container { position: relative; width: 100%; border-radius: 12px; overflow: hidden; margin-top: 5px; display: block; cursor: pointer; background: #000; aspect-ratio: 3 / 4; max-height: 720px; -webkit-tap-highlight-color: transparent; }
+        .media-container { position: relative; width: 100%; border-radius: 12px; overflow: hidden; margin-top: 1px; margin-bottom: 1px; display: block; cursor: pointer; background: #000; aspect-ratio: 3 / 4; max-height: 720px; -webkit-tap-highlight-color: transparent; }
         .media-container img { width: 100%; height: 100%; display: block; object-fit: cover; margin: 0 auto; max-height: none; transition: transform 0.1s ease; transform: scale(1.0); }
         .media-container:active img { transform: scale(1.02); }
         .media-container.auto-fit { aspect-ratio: initial; height: auto; }
