--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         .username { font-size: 15px; color: #1da1f2; margin-bottom: 12px; cursor: default; -webkit-tap-highlight-color: transparent; }
         
         /* 🔥 ফিক্স: ফন্ট সাইজ ছোট করা হয়েছে (13.5px) এবং min-width দেওয়া হয়েছে যাতে ঝাঁকুনি না হয় */
-        .stats { display: flex; gap: 2px; font-size: 13.5px; color: #1c1e21; margin-bottom: 8px; font-weight: 500; align-items: center; }
+        .stats { display: flex; gap: 2px; font-size: 13.5px; color: #0f1419; margin-bottom: 8px; font-weight: 500; align-items: center; }
         .stats b { color: #1c1e21; font-weight: 800; margin-right: 2px; display: inline-block; min-width: 15px; text-align: center; } 
         
         /* 🔥 ফিক্স: মেটা ইনফো ফন্ট সাইজ ছোট করা হয়েছে */
