--- a/post.html
+++ b/post.html
@@ -80,10 +80,10 @@
     .time-ago { font-size: 15px; color: #536471; }  
     .dot-separator { font-size: 15px; color: #536471; margin: 0 2px; }  
     .post-title { font-size: 18px; font-weight: 700; color: #0f1419; margin-bottom: 8px; margin-top: -3px; line-height: 1.3; }  
-    .post-excerpt { font-size: 15px; color: #0f1419; line-height: 1.4; margin-bottom: 8px; display: -webkit-box; -webkit-line-clamp: 4; -webkit-box-orient: vertical; overflow: hidden; }  
+    .post-excerpt { font-size: 15px; color: #0f1419; line-height: 1.4; margin-bottom: 1px; display: -webkit-box; -webkit-line-clamp: 4; -webkit-box-orient: vertical; overflow: hidden; }  
     .read-more-text { color: #1da1f2; font-weight: 600; font-size: 14px; }  
-    .hashtags { color: #1d9bf0; font-size: 15px; margin-bottom: 10px; cursor: default; }  
-    .media-container { position: relative; width: 100%; border-radius: 12px; overflow: hidden; margin-top: 5px; display: block; cursor: pointer; background: #000; aspect-ratio: 3 / 4; max-height: 720px; -webkit-tap-highlight-color: transparent; }  
+    .hashtags { color: #1d9bf0; font-size: 15px; margin-bottom: 1px; cursor: default; }  
+    .media-container { position: relative; width: 100%; border-radius: 12px; overflow: hidden; margin-top: 1px; margin-bottom: 1px; display: block; cursor: pointer; background: #000; aspect-ratio: 3 / 4; max-height: 720px; -webkit-tap-highlight-color: transparent; }  
     .media-container.auto-fit { aspect-ratio: initial; height: auto; }  
     .media-container.auto-fit img { height: auto; object-fit: contain; }  
     .play-icon { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 60px; height: 60px; background-color: rgba(0, 0, 0, 0.6); border-radius: 50%; display: flex; justify-content: center; align-items: center; pointer-events: none; border: 2px solid rgba(255,255,255,0.8); }  
@@ -91,7 +91,7 @@
     .duration-badge { position: absolute; bottom: 8px; right: 8px; background-color: rgba(0, 0, 0, 0.8); color: white; padding: 2px 6px; border-radius: 4px; font-size: 12px; font-weight: bold; pointer-events: none; z-index: 5; }  
     
     /* --- ফুটার ও শেয়ার বাটন --- */
-    .post-footer { display: flex; justify-content: space-between; align-items: center; margin-top: 12px; color: #536471; font-size: 16px; font-weight: 500; }  
+    .post-footer { display: flex; justify-content: space-between; align-items: center; margin-top: 5px; color: #536471; font-size: 16px; font-weight: 500; }  
     .footer-left { display: flex; align-items: center; gap: 6px; }  
     .footer-right { display: flex; align-items: center; gap: 20px; }  
     .count-text { font-weight: 500; font-size: 15px; } 
