--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         .post-excerpt { font-size: 15px; color: #0f1419; line-height: 1.4; margin-bottom: 1px; display: -webkit-box; -webkit-line-clamp: 4; -webkit-box-orient: vertical; overflow: hidden; }
         .post-excerpt:active { color: #1da1f2; }
         .read-more-text { color: #1da1f2; font-weight: 600; font-size: 14px; }
-        .hashtags { color: #1d9bf0; font-size: 15px; margin-bottom: 1px; cursor: default; }
+        .hashtags { color: #1d9bf0; font-size: 15px; margin-top: 0px margin-bottom: 1px; cursor: default; }
         
         /* --- মিডিয়া কন্টেইনার --- */
         .media-container { position: relative; width: 100%; border-radius: 12px; overflow: hidden; margin-top: 1px; margin-bottom: 1px; display: block; cursor: pointer; background: #000; aspect-ratio: 3 / 4; max-height: 720px; -webkit-tap-highlight-color: transparent; }
