--- a/admin.html
+++ b/admin.html
@@ -178,7 +178,7 @@
             mediaImage: media,
             videoDuration: duration,
             paragraphs: paragraphs,
-            hashtags: "#Filmixo #Movies #Viral",
+            hashtags: "#filmixo #viralfilm #trendingmovie #blockbuster #popular",
             
             // ৩টি আলাদা বাটন লিংক ম্যাপিং:
             downloadLink2: link1,      // ভিজিট বাটন ১ (1080p)
