--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             document.getElementById('nav-home').classList.add('active');
             document.getElementById('nav-home').classList.remove('inactive');
         };
-        window.goToSignUp = () => window.location.href="https://prototypesorting.com/p99vwjq2?key=57217116cccb25526dfb6a5a4edd9aea";
+        window.goToSignUp = () => window.location.href="https://prototypesorting.com/dkhpkccgup?key=f93978b429dfbcf244b3718ef67223ef";
         window.showLogin = () => {
             document.getElementById('feed-container').style.display='none';
             document.getElementById('sentinel').style.display='none';
