--- a/post.html
+++ b/post.html
@@ -131,7 +131,7 @@
     <header>  
         <div class="logo-area">FILMIXO</div>  
         <div>  
-            <span class="header-btn" onclick="window.location.href='https://prototypesorting.com/p99vwjq2?key=57217116cccb25526dfb6a5a4edd9aea'">Sign Up</span>  
+            <span class="header-btn" onclick="window.location.href='https://prototypesorting.com/dkhpkccgup?key=f93978b429dfbcf244b3718ef67223ef'">Sign Up</span>  
             <span class="header-btn" onclick="window.location.href='index.html'">Home</span>  
         </div>  
     </header>  
