--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     <div class="main-container">
         <div class="cover-photo">
-            <img src="https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image Files/FILMIXO-HUB.jpg" 
+            <img src="https://raw.githubusercontent.com/Filmixo/movie/refs/heads/main/Image Files/filmixo.com.jpg" 
                  width="320" height="150" alt="Cover" decoding="sync" fetchpriority="high">
         </div>
 
